--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 getSkinGroundtruth/__pycache__/c2_1_combineTewNPY.cpython-36.pyc
 getSkinGroundtruth/__pycache__/c1_1_with1_0ButClass.cpython-36.pyc
 *.pyc
+getSkinGroundtruth/__pycache__/c1_1_with1_0ButClass.cpython-36.pyc
